--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,505 @@
+@font-face {
+  font-family: "Bebas-Neue";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/BebasNeue Regular.otf") format("opentype");
+}
+@font-face {
+  font-family: "Bebas-Neue";
+  font-weight: 300;
+  font-style: normal;
+  src: url("../fonts/BebasNeue Light.otf") format("opentype");
+}
+@font-face {
+  font-family: "Bebas-Neue";
+  font-weight: 600;
+  font-style: normal;
+  src: url("../fonts/BebasNeue Bold.otf") format("opentype");
+}
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+li {
+  list-style-type: none;
+}
+.wrapper {
+  width: 60%;
+  margin: 0 auto;
+}
+body {
+  font-family: "Bebas-Neue", sans-serif;
+  font-weight: normal;
+  color: #ffffff;
+}
+.main-header {
+  height: 500px;
+  background: url("../images/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: -20px;
+  background-size: cover;
+}
+.main-header h1 {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 90px;
+  font-weight: 600;
+  margin: 0;
+  line-height: 67px;
+  padding-top: 127px;
+  margin-left: 60px;
+}
+.main-header span {
+  font-size: 36px;
+  color: #ffffff;
+  line-height: 25px;
+  font-weight: 600;
+  margin-left: 60px;
+}
+.main-nav {
+  background: #252222;
+}
+.main-nav .wrapper {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  justify-content: space-between;
+}
+.main-nav .logo {
+  font-size: 35px;
+  font-weight: normal;
+  margin-left: 30px;
+}
+.main-nav .logo h3 {
+  margin: 0;
+}
+.main-nav .links {
+  display: flex;
+  align-items: center;
+}
+.main-nav .links ul {
+  display: flex;
+}
+.main-nav .links ul a {
+  font-weight: normal;
+  font-size: 20px;
+  color: #FFF;
+  padding: 10px;
+  padding-bottom: 15px;
+  margin-left: 10px;
+}
+.main-nav .links ul a:hover {
+  color: #65ba99;
+  border-bottom: 1px solid green;
+  transition: 0.2s;
+}
+.main-nav .links .social-links {
+  display: flex;
+  margin-left: 62px;
+}
+.main-nav .links .social-links div {
+  width: 36px;
+  height: 36px;
+  background: #FFF;
+  border-radius: 50%;
+  margin-left: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+}
+.main-nav .links .social-links div a {
+  color: #252222;
+}
+/* The grid column markup atomic css style*/
+.col2 {
+  grid-column-start: span 2;
+}
+.row2 {
+  height: 255px;
+}
+.row3 {
+  height: 350px;
+}
+.row4 {
+  height: 235px;
+}
+.row5,
+.row6 {
+  height: 235px;
+}
+.row1 {
+  height: 250px;
+}
+/* ************************************** */
+#portfolio {
+  background: #65ba99;
+}
+#portfolio .header {
+  height: 175px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+}
+#portfolio .header h2 {
+  font-size: 37px;
+}
+#portfolio .header span {
+  font-size: 19px;
+}
+#portfolio .works-grid-container {
+  height: 1560px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  overflow: none;
+  box-sizing: content-box;
+  padding-bottom: 100px;
+}
+#portfolio .works-grid-container .work-piece {
+  position: relative;
+  background: #ccc;
+}
+#portfolio .works-grid-container .work-piece:nth-child(odd) {
+  background: #cdc;
+}
+#portfolio .works-grid-container .work-piece img {
+  width: 100%;
+  height: 100%;
+}
+.quote {
+  height: 300px;
+  background: url("../images/quote-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: -50px;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+.quote .wrapper {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.quote h2 {
+  font-size: 36px;
+  text-align: center;
+  width: 78%;
+  margin: 0 auto;
+  position: relative;
+}
+.quote h2::before {
+  display: inline-block;
+  content: open-quote;
+  position: absolute;
+  font-size: 100px;
+  right: 100%;
+  bottom: calc(0% + 5px);
+}
+.quote h2::after {
+  display: inline-block;
+  content: close-quote;
+  position: absolute;
+  font-size: 100px;
+  left: 100%;
+  top: calc(0%);
+  transform: rotateX(-180deg);
+}
+.quote span {
+  position: absolute;
+  font-size: 24px;
+  left: calc(90% - 113px);
+  top: calc(100% + 44px);
+}
+#news {
+  background: #cdcdcd;
+  text-align: center;
+}
+#news h2 {
+  font-size: 48px;
+  color: #252222;
+  padding-top: 70px;
+  margin-bottom: 75px;
+}
+#news .flex-container {
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+}
+#news .left {
+  width: 45%;
+  margin-bottom: 80px;
+}
+#news .left .date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#news .left .date .day {
+  display: inline-block;
+  font-size: 11px;
+  line-height: 20px;
+  background: #59a386;
+  padding: 6px 21px;
+  margin-left: 1px;
+  font-family: 'Open Sans', sans-serif;
+}
+#news .left .date .place {
+  font-size: 14px;
+  color: #e74c3c;
+  line-height: 20px;
+  font-style: italic;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+#news .left .date .place i {
+  color: #62b9b0;
+  margin-right: 8px;
+}
+#news .left .article-content h4 {
+  font-size: 16px;
+  color: #59a386;
+  margin-top: 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+#news .left .article-content img {
+  width: 100%;
+  margin-top: 20px;
+}
+#news .left .article-content p {
+  margin-top: 18px;
+  color: #666767;
+  font-size: 14px;
+  line-height: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#news .left .article-content a {
+  color: #e2534b;
+  font-size: 14px;
+  display: block;
+  text-align: right;
+  margin-right: 5px;
+  margin-top: 17px;
+}
+#news .left .article-content a i {
+  font-size: 13px;
+  margin-left: 16px;
+}
+#news .right {
+  width: 45%;
+  font-family: 'Open Sans', sans-serif;
+}
+#news .right h5 {
+  font-size: 18px;
+  color: #59a386;
+  height: 32px;
+  padding-top: 7px;
+  margin-bottom: 15px;
+}
+#news .right .tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+#news .right .tags span {
+  font-size: 14px;
+  padding: 7px 11px;
+  background: #59a386;
+  margin-right: 6px;
+  margin-top: 10px;
+}
+#news .right .tags span:hover {
+  cursor: pointer;
+  transition: 0.2s;
+}
+#news .right .blog h4 {
+  font-family: 'Open Sans', sans-serif;
+  margin-top: 60px;
+  font-size: 20px;
+  color: #252222;
+}
+#news .right .blog h4 span {
+  font-weight: 300;
+  color: #818181;
+  font-style: italic;
+}
+#news .right .blog .blogpost {
+  margin-top: 30px;
+}
+#news .right .blog .blogpost img {
+  float: left;
+  width: 70px;
+  height: 70px;
+  margin-right: 2%;
+}
+#news .right .blog .blogpost p {
+  margin-right: 5%;
+  font-size: 13px;
+  color: #252222;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 18px;
+  font-weight: 400;
+}
+#news .right .blog .blogpost span {
+  font-size: 13px;
+  opacity: 0.5;
+  color: #e2534b;
+  margin-top: 5px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+.partners {
+  background: #bebebe;
+}
+.partners .wrapper {
+  height: 210px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bio {
+  background: #e2534b;
+}
+.bio .wrapper {
+  text-align: center;
+}
+.bio h2 {
+  font-size: 48px;
+  color: #252222;
+  padding-top: 70px;
+}
+.bio .flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+.bio .left {
+  margin-top: 130px;
+  margin-left: 13%;
+  text-align: left;
+}
+.bio .left .selfie {
+  width: 230px;
+  height: 230px;
+  background: #FFF;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.bio .left .selfie::before {
+  display: block;
+  content: "John Smits";
+  font-size: 36px;
+  line-height: 18px;
+  text-transform: uppercase;
+  font-weight: 600;
+  position: absolute;
+  bottom: calc(100% + 45px);
+}
+.bio .left .social-links {
+  display: flex;
+  margin-top: 48px;
+  width: 230px;
+  justify-content: space-around;
+  margin-bottom: 75px;
+}
+.bio .left .social-links div {
+  width: 36px;
+  height: 36px;
+  background: #FFF;
+  border-radius: 50%;
+  margin-left: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+}
+.bio .left .social-links div:first-child {
+  margin-left: 0;
+}
+.bio .left .social-links div a {
+  color: #e2534b;
+}
+.bio .right {
+  margin-top: 65px;
+  text-align: left;
+  width: 50%;
+}
+.bio .right h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+.bio .right p {
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 22px;
+  font-family: 'Open Sans', sans-serif;
+}
+#contact {
+  background: url("../images/contact-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+#contact .wrapper {
+  text-align: center;
+}
+#contact h2 {
+  font-size: 48px;
+  color: #252222;
+  padding-top: 70px;
+}
+#contact .phone {
+  display: block;
+  color: #FFF;
+  font-size: 48px;
+  margin-top: 70px;
+  font-weight: 600;
+}
+#contact .email {
+  display: block;
+  margin-top: 25px;
+  color: #ffffff;
+  font-size: 60px;
+  font-weight: 600;
+  padding: 26px 130px;
+  border: 5px solid #FFF;
+  line-height: 1;
+}
+#contact address {
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: 27px;
+  font-style: normal;
+}
+#contact footer {
+  margin-top: 80px;
+}
+#contact footer .copy {
+  padding: 30px 0;
+  font-size: 14px;
+  line-height: 22px;
+  display: block;
+  font-family: 'Open Sans', sans-serif;
+}
+.workpiece-after::after {
+  content: "Как при ховере сделать то что надо было?, умею только текст при ховере делать =)";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(101, 186, 153, 0.8);
+  z-index: 6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
