--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ li {
   list-style-type: none;
 }
 .wrapper {
-  width: 60%;
+  width: 960px;
   margin: 0 auto;
 }
 body {
@@ -148,13 +148,14 @@ body {
   background: transparent;
 }
 #portfolio .header h2 {
-  font-size: 37px;
+  font-size: 48px;
 }
 #portfolio .header span {
-  font-size: 19px;
+  font-size: 24px;
 }
 #portfolio .works-grid-container {
   height: 1560px;
+  max-width: 960px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
@@ -165,19 +166,63 @@ body {
 #portfolio .works-grid-container .work-piece {
   position: relative;
   background: #ccc;
+  background-size: cover;
+  background-position: center;
 }
-#portfolio .works-grid-container .work-piece:nth-child(odd) {
-  background: #cdc;
-}
-#portfolio .works-grid-container .work-piece img {
+#portfolio .works-grid-container .work-piece .on-hover {
   width: 100%;
   height: 100%;
+  background: rgba(101, 186, 153, 0.6);
+  display: flex;
+  flex-direction: column;
+  display: none;
+}
+#portfolio .works-grid-container .work-piece .on-hover .middle-content {
+  margin: auto;
+  color: #fff;
+  font-size: 30px;
+  opacity: 2;
+}
+#portfolio .works-grid-container .work-piece .on-hover .middle-content .fa-search:hover {
+  cursor: pointer;
+  color: #444442;
+  transition: 0.25s ease;
+}
+#portfolio .works-grid-container .work-piece .on-hover .down-content {
+  align-self: center;
+  width: 235px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 23px;
+  font-size: 22px;
+}
+#portfolio .works-grid-container .work-piece .on-hover .down-content .fa-heart:hover {
+  cursor: pointer;
+  color: #f90202;
+  transition: 0.25s ease;
+}
+#portfolio .works-grid-container .work-piece .on-hover .down-content .fa-info-circle:hover {
+  cursor: pointer;
+  color: #00f9f9;
+  transition: 0.25s ease;
+}
+#portfolio .works-grid-container .work-piece .on-hover .down-content .fa-link:hover {
+  cursor: pointer;
+  color: #0950f4;
+  transition: 0.25s ease;
+}
+#portfolio .works-grid-container .work-piece .on-hover .down-content .fa-images:hover {
+  cursor: pointer;
+  color: #e0ef39;
+  transition: 0.25s ease;
+}
+#portfolio .works-grid-container .work-piece:hover .on-hover {
+  display: flex;
 }
 .quote {
   height: 300px;
   background: url("../images/quote-bg.jpg");
   background-repeat: no-repeat;
-  background-position: -50px;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -269,9 +314,12 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
 }
-#news .left .article-content img {
+#news .left .article-content .news-photo {
   width: 100%;
+  height: 200px;
   margin-top: 20px;
+  background-size: cover;
+  background-position: center;
 }
 #news .left .article-content p {
   margin-top: 18px;
@@ -332,11 +380,13 @@ body {
 #news .right .blog .blogpost {
   margin-top: 30px;
 }
-#news .right .blog .blogpost img {
+#news .right .blog .blogpost-photo {
   float: left;
   width: 70px;
   height: 70px;
   margin-right: 2%;
+  background-size: cover;
+  background-position: center;
 }
 #news .right .blog .blogpost p {
   margin-right: 5%;
