--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,20 @@
   font-style: normal;
   src: url("../fonts/BebasNeue Bold.otf") format("opentype");
 }
+@keyframes scale {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(0.7);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -37,6 +51,49 @@ body {
   color: #ffffff;
   min-width: 320px;
   overflow-x: hidden;
+}
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: #fff;
+  z-index: 999;
+}
+.preloader.done {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  display: none;
+}
+.loader {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border-color: #65BA99;
+  top: 0;
+  left: 0;
+}
+.loader:before {
+  animation: scale 1.2s linear 0s infinite;
+}
+.loader:after {
+  opacity: 0;
+  animation: scale 1.2s linear 0.5s infinite;
 }
 .main-header {
   height: 500px;
